Responsiveness added in navbar

--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-.body{
+body{
+    overflow-x: hidden;
+
+}
+html{
     overflow-x: hidden;
 }
-
 .cardShadow{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
